MySQL & requirement added

--- a/.env.save
+++ b/.env.save
@@ -1,7 +1,14 @@
-DJANGO_SETTINGS_MODULE=core.settings.local
+SETTINGS_MODULE=core.settings.local
 ALLOWED_HOSTS=
 SECRET_KEY=
 DEBUG=Talse
+
+DB_ENGINE=
+DB_NAME=
+DB_USER=
+DB_PASSWORD=
+DB_HOST=
+DB_PORT=
 
 FRONTEND_URL=
 
