subscription MVT, API & Doc complete

--- a/.env.save
+++ b/.env.save
@@ -1,6 +1,6 @@
 SETTINGS_MODULE=core.settings.local
-ALLOWED_HOSTS=
-SECRET_KEY=
+ALLOWED_HOSTS=localhost,127.0.0.1
+SECRET_KEY=DUMMY-SECRET-KEY
 DEBUG=Talse
 
 DB_ENGINE=
@@ -9,11 +9,3 @@ DB_USER=
 DB_PASSWORD=
 DB_HOST=
 DB_PORT=
-
-FRONTEND_URL=
-
-
-STRIPE_PUBLIC_KEY=
-STRIPE_SECRET_KEY=
-
-STRIPE_WEBHOOK_SECRET=
